# nanog93-hackathon-challenges

./: Dockerfile  Makefile  README.md
network-01/: network-01.yml  score-challenge.sh
network-01/files/host-config/: add-host-routes.sh
network-01/files/r1/: startup-config
network-01/files/r2/: startup-config
network-01/files/r3/: startup-config
network-01/files/r4/: startup-config
network-02/: network-02.yml  score-challenge.sh
network-02/files/r1/: startup-config
network-02/files/r2/: startup-config
network-02/files/r3/: startup-config
network-02/files/r4/: startup-config
scenario_graphql/: README.md  bgp_template.j2  gql_model.py  gql_query.py  hash_solution.py  interface_template.j2  pyproject.toml  template_model.py
scenario_nautobot/: README.md  nbhack.clab.yml  pynautobot_example.py  pyproject.toml
scenario_nautobot/scenario_nautobot/: score.py
scenario_raincloud/: scenario_raincloud.yaml
scenario_raincloud/clab-scenario_raincloud/: ansible-inventory.yml  authorized_keys  topology-data.json
scenario_raincloud/clab-scenario_raincloud/.tls/ca/: ca.key  ca.pem
scenario_raincloud/clab-scenario_raincloud/2_player_crpd/log/: __policy_names_rpdc__  __policy_names_rpdn__  interactive-commands  license  messages
scenario_raincloud/files/: base.conf
scenario_snowstorm/: snowstorm.yaml
scenario_snowstorm/files/: 7018.conf  junos_sfnt.lic  player_crpd.conf
